# yt-subtitle-frontend

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
yt-subtitles-frontend/: app.py
yt-subtitles-frontend/static/: index.js  styles.css
yt-subtitles-frontend/templates/: index.html
yt_subtitles/: app.py
