[tool.poetry]
name = "yt_subtitles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "yt_subtitles"}]

[tool.poetry.dependencies]
python = "^3.8"
youtube-transcript-api = "^0.5.0"
transformers = "^4.25.1"
sentencepiece = "^0.1.97"
protobuf = "3.20.1"
torch = "^1.13.1"
truecase = "^0.0.14"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
