[tool.poetry]
name = "download-yt-subtitles-frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "yt_subtitles"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
